--- a/form.html
+++ b/form.html
@@ -63,7 +63,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
@@ -81,7 +81,10 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link" href="/upload-image">Upload-Image</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/finpay">FinPay</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -92,6 +95,7 @@
             </form>
         </div>
     </nav>
+    <h1 style="margin-top: 30px;">Send Firebase Notification</h1>
     <div class="classForm" style="
         width: 80%;
         height: 80%;
